Animal_shelter/force-app/main/default/objects/Adoption__c/fields/Adopter__c.field-meta.xml
<CustomField>
    <fullName>Adopter__c</fullName>
    <label>Adopter</label>
    <referenceTo>Adopter__c</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>