Animal_shelter/force-app/main/default/objects/Adoption__c/fields/Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Date__c</fullName>
    <label>Adoption Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>